public/styles.css
*, *::before, *::after{
    margin:0px;
    padding:0px;
    max-height:100vh;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color:white;
}

.containerr{
    display:flex;
    flex-flow: column wrap;
    justify-content: space-between;
    background-color: rgb(66, 66, 66);
    background:url("images/Frame\ 1.png");
    background-size: cover;
    background-position-y: -200px;
    /*background-color: rgb(119, 119, 119);*/
}
.containerr .calendar {
    display:grid;
    place-items:center;
    font-weight: lighter;
}
.calendar h1{
    font-weight: lighter;
}
.containerr .to-do-list {
    font-weight: lighter;
    overflow-y: auto;
}
.to-do-list h1{
    font-weight: lighter;
}
.containerr .news {
    font-weight: lighter;
}
.news h1{
    font-weight: lighter;
}
.time{
    margin:5px;
    box-sizing:border-box;
    align-self: flex-end;
    min-height:20vh;
    width:30%;
    background-color: rgba(177, 175, 118, 0.26);
}
.calendar{
    margin:5px;
    align-self: flex-end;
    min-height:77.5vh;
    width:30%;
    background-color: rgba(138, 128, 96, 0.377);
}
.weather{
    margin:5px;
    align-self: center;
    min-height:50vh;
    width:30%;
    background-color: rgba(161, 154, 115, 0.329);
}
.to-do-list{
    margin:5px;
    align-self: center;
    height:47.5vh;
    width:30%;
    background-color: rgba(155, 167, 134, 0.281);
}
.news{
    margin:5px;
    align-self: flex-start;
    min-height:99vh;
    width:30%;
    background-color: rgba(152, 156, 109, 0.288);
}
/*Styling content inside the flex items*/

